Bug 1140832 - Don't call gtk_im_context_reset() during "delete_surrounding" notification. r=m_kato, a=sledru